<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sensor_name_background">

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sensor_name_title_background"
        android:text="@string/protected_object"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sna_sensor_name_et"
        android:layout_margin="20dp"
        android:hint="@string/name_of_object"
        android:textSize="22sp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="15dp" />

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="@android:color/white"
        android:text="@string/what_are_you_protecting" />

    <io.relayr.commons.widget.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textSize="22sp"
        android:gravity="center"
        android:onClick="onDoneClicked"
        android:enabled="true"
        android:clickable="true"
        style="@style/BoldText"
        android:background="@drawable/button_white"
        android:textColor="@android:color/white" />

</LinearLayout>