<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_settings"
        android:background="@android:color/transparent"
        android:padding="18dp"
        android:layout_gravity="right"
        android:onClick="onSettingsClick"/>

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_exclamation"
        android:textAllCaps="true"
        style="@style/BoldText"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="65sp"
        android:paddingTop="40dp"
        android:layout_gravity="center"/>

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/someone"
        style="@style/BoldText"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:layout_gravity="center"/>

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touched_your"
        android:textAllCaps="true"
        style="@style/BoldText"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <io.relayr.commons.widget.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_object_name"
        android:text="CELLO"
        style="@style/BoldText"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="80sp"
        android:layout_gravity="center"/>

    <io.relayr.commons.widget.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_white"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:text="@string/dismiss"
        style="@style/BoldText"
        android:onClick="onBackClick"
        android:enabled="true"
        android:clickable="true"/>


</LinearLayout>